extensions/migrate-nx/tests/snapshots/migrate_nx_test__migrate_nx_extension__projects__converts_type_and_tags-2.snap
---
source: extensions/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"lib/moon.yml\")).unwrap()"
---
language: javascript
tags:
- foo-bar
- baz_qux
toolchains:
  default: node
