extensions/migrate-nx/tests/snapshots/migrate_nx_test__migrate_nx_extension__projects__converts_type_and_tags.snap
---
source: extensions/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"app/moon.yml\")).unwrap()"
---
language: javascript
tags:
- scope.client
- scope.server
toolchains:
  default: node
